Sick animations bro

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,18 @@
+body {
+    background-color: #f4f4f4;
+    font-family: helvetica neue,helvetica,sans-serif;
+}
 header {
     display: flex;
-    flex-flow: row;
+    flex-flow: column;
     justify-content: center;
+    align-items: center;
+    margin-top: 12px;
 }
 header h1 {
-    font-size: 4em;
+    font-size: 3em;
+    margin: 12px 6px;
+    text-align: center;
 }
 .gainz-calc {
     display: flex;
@@ -37,9 +45,37 @@ header h1 {
     flex-flow: column;
     align-items: center;
 }
+.gainz-calc button {
+    margin: 6px;
+}
+
+.gainz-calc .results .wealth {
+    color: green;
+}
 
 .gainz-calc .results p {
     margin: 6px 6px;
+}
+.wiggle {
+    text-align: center;
+    animation: wiggle 2s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+@keyframes wiggle {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
+footer {
+    text-align: center;
 }
 @media screen and (min-width: 35.5em) {
     header h1 {
